...
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/txt_record_start_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="Date"
                                android:inputType="textMultiLine" />

                            <EditText
                                android:id="@+id/txt_record_start_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="Time"
                                android:inputType="textMultiLine" />
...
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/txt_record_end_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="Date"
                                android:inputType="textMultiLine" />

                            <EditText
                                android:id="@+id/txt_record_end_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="Time"
                                android:inputType="textMultiLine" />
...
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/layout_intensity">

                        <TextView
                            android:id="@+id/txt_record_intensity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:autoText="false"
                            android:clickable="true"
...
