...
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="Triggers"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/txt_record_triggers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textMultiLine" />
...
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="Symptoms"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/txt_record_symptoms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textMultiLine" />
...
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="Activities"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/txt_record_activities"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textMultiLine" />
...
