...
            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>

        <!-- Your FAB implementation -->
        <shehan.com.migrainetrigger.utility.customview.SheetFab
            android:id="@+id/fab"
            style="@style/Widget.MaterialSheetFab.Fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin" />

...
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/new_fab_inter" />

                    <!-- Full -->
                    <TextView
                        android:id="@+id/fab_sheet_item_full"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/new_fab_full" />

                </LinearLayout>

...
